Document running tests from IntelliJ after vector API became required
Since bc028fde4424d33d1e99dd7d9d39af0f9962e8fc the vector API usage is no longer
optional. Maven handles the required JVM flags via surefire args but IntelliJ
does not consume these automatically.